mobile fixes - fix contents color on non-selected color theme - fix iphone overflow problem: http://stackoverflow.com/questions/3047337/does-overflowhidden-applied-to-body-work-on-iphone-safari - fix jquery-ui selectable bug related to body overflow in webkit: https://bugs.jqueryui.com/ticket/9588

--- a/src/main/frontend/css/styles.css
+++ b/src/main/frontend/css/styles.css
@@ -2,8 +2,9 @@
     font-weight: bold;
 }
 
-html {
+html, body {
     overflow-x: hidden;
+    position: relative;
 }
 
 body {
@@ -1659,15 +1660,6 @@ ul.ContentNav {
 
     .right-sidebar div {
         display: none;
-    }
-
-    #contents-module.active .module_name {
-        color: #FFF;
-    }
-
-    #contents-module.active .ContentNav a {
-        color: #FFF;
-        border-left-color: #FFF;
     }
 }
 
