--- a/src/main/frontend/css/styles.night.css
+++ b/src/main/frontend/css/styles.night.css
@@ -143,7 +143,7 @@ body.night .moduleIcon.type4 {
 }
 
 body.night .ContentNav > li > a {
-    color: #FFF;
+    color: #E0E0E0;
 }
 
 body.night .leftbg,
